syntax = "proto3";

package kv.v1;

option go_package = "github.com/example/connect-plugin-go/examples/kv/gen;kvv1";

// KVService provides simple key-value storage.
service KVService {
  // Get retrieves a value by key.
  rpc Get(GetRequest) returns (GetResponse);

  // Put stores a key-value pair.
  rpc Put(PutRequest) returns (PutResponse);

  // Delete removes a key.
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
  bool found = 2;
}

message PutRequest {
  string key = 1;
  bytes value = 2;
}

message PutResponse {}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool found = 2;
}
